[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/entities/tower.gd" id="1"]
[ext_resource type="Script" path="res://scripts/components/health_component.gd" id="2"]
[ext_resource type="Script" path="res://scripts/components/health_bar_3d.gd" id="3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_001"]
size = Vector3(3, 4, 3)

[node name="Tower" type="StaticBody3D"]
script = ExtResource("1")

[node name="ModelContainer" type="Node3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("BoxShape3D_001")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2")
max_health = 2000
current_health = 2000

[node name="HealthBar3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
script = ExtResource("3")

[node name="SubViewport" type="SubViewport" parent="HealthBar3D"]
transparent_bg = true
size = Vector2i(300, 40)
render_target_update_mode = 4

[node name="ProgressBar" type="ProgressBar" parent="HealthBar3D/SubViewport"]
offset_right = 300.0
offset_bottom = 40.0
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="HealthBar3D/SubViewport/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite3D" type="Sprite3D" parent="HealthBar3D"]
pixel_size = 0.005
billboard = 1

[node name="DetectionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 12

[node name="DetectionShape" type="CollisionShape3D" parent="DetectionArea"]

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true
